overflow bug fix

--- a/src/App.css
+++ b/src/App.css
@@ -48,11 +48,27 @@ html{
 
 main{
     display: grid;
-    grid-template-rows: 20rem auto;
+    grid-template-rows: 20rem 1fr;
+}
+
+body.dark{
+    background-color: var(--veryDarkBlue);
+}
+
+body.light{
+    background-color: var(--veryLightGrayishBlue);
 }
 
 body.dark div.top-part{
     background-image: url("./assets/bg-mobile-dark.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 3rem 0 0 0;
+    height:20rem;
+}
+
+body.light div.top-part{
+    background-image: url("./assets/bg-mobile-light.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     padding: 3rem 0 0 0;
@@ -231,7 +247,7 @@ body.dark div.top-part{
 .todo-state::after{
     content: "Drag and drop to reorder list";
     position: absolute;
-    bottom:-5rem;
+    bottom:-3rem;
     font-size:1.2rem;
     font-size: 1.5rem;
     font-family: j-sans-regular;
@@ -276,6 +292,7 @@ div.bottom-part{
         background-image: url("./assets/bg-desktop-light.jpg");
         background-repeat: no-repeat;
         background-size: cover;
+        background-position: top left;
         padding: 3rem 0 0 0;
         height:20rem;
     }
@@ -303,13 +320,7 @@ div.bottom-part{
 }
 
 /* light mode */
-body.light div.top-part{
-    background-image: url("./assets/bg-mobile-light.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    padding: 3rem 0 0 0;
-    height:20rem;
-}
+
 
 body.light .input-container{
     background-color: var(--veryLightGray);
